--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -14,6 +14,11 @@
   flex-grow: 1;
 }
 
+.navbar-container.shortened{
+  width: 90px;
+  padding: 0px;
+}
+
 .navbar-container::-webkit-scrollbar {
   width: 12px;
 }
@@ -26,4 +31,10 @@
   background-color: #9e9e9e;
   border-radius: 16px;
   border: 2px solid #f1f1f1;
+}
+
+
+@media (max-width: 1310px) {
+  .navbar-container{
+  }
 }
