--- a/src/components/styles/NavBarItem.css
+++ b/src/components/styles/NavBarItem.css
@@ -1,7 +1,7 @@
 .navBarItem-tab {
   border-radius: 10px;
   width: calc(100% - 4px);
-  margin: 0px 2px;
+  margin: 14px 2px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -15,5 +15,14 @@
 
 .navBarItem-text {
   font-size: 0.9rem;
-  margin-left: 10px;
+  margin: 0 0 0 10px;
+}
+
+.navBarItem-tab.shortened{
+  flex-direction: column;
+}
+
+.navBarItem-text.shortened {
+  font-size: 0.7rem;
+  margin: 0 0 0 10px;
 }
