--- a/src/components/styles/Videos.css
+++ b/src/components/styles/Videos.css
@@ -1,12 +1,14 @@
+
 .videos-container {
-  display: flex;
-  justify-content: center;
-  width: 90%;
-  box-sizing: border-box;
-  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   margin-left: 220px;
   margin-top: 60px;
-  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.videos-container.extended{
+  margin-left: 90px;
 }
 
 .video-container {
@@ -76,4 +78,22 @@
 .video__views {
   margin: 0;
   font-size: 0.85rem;
+}
+
+@media (max-width:1480px) {
+  .videos-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width:1080px) {
+  .videos-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width:600px) {
+  .videos-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
